# evidence-bound-ai-evaluation-harness

./: CHANGELOG.md  README.md  pyproject.toml
docs/: DESIGN_SOURCE_SUMMARY.md  EVALUATION_RUBRIC.md  EVALUATION_WORKFLOW.md  FAILURE_TAXONOMY.md  PORTFOLIO_BLURB.md  PORTFOLIO_PUBLICATION_RECORD.md  RELEASE_DRAFT_V0_1_X.md  RELEASE_DRAFT_V0_2_0.md  SAFETY_BOUNDARY.md  V0_2_0_LIGHTWEIGHT_CLI_VALIDATOR_IMPLEMENTATION.md  V0_2_0_LIGHTWEIGHT_CLI_VALIDATOR_PLAN.md  VERSION_SCOPE.md  WALKTHROUGH_INDEX.md  WHAT_THIS_IS_NOT.md
evidence_bound_ai_evaluation_harness/: cli.py
examples/case_001_missing_context/: WALKTHROUGH.md  ai_output.md  evaluation_report.json  source_packet.md
examples/case_002_unsupported_specificity/: WALKTHROUGH.md  ai_output.md  evaluation_report.json  source_packet.md
examples/case_003_source_conflict/: WALKTHROUGH.md  ai_output.md  evaluation_report.json  source_packet.md
schemas/: evaluation_report.schema.json
tests/: test_cli_validator.py  test_evaluation_report_schema.py  test_negative_evaluation_report_schema.py
