[project]
name = "evidence-bound-ai-evaluation-harness"
version = "0.1.0"
description = "Portfolio-grade prototype for evaluating AI-generated healthcare-adjacent outputs against source evidence and reviewability criteria."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name = "Patrick Chen" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
